--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,11 @@
     <string name="ziperror">Enter a valid zip code</string>
     <string name="cityerror">Enter a valid city name</string>
 
+    <string-array name="Cards">
+        <item>Visa</item>
+        <item>MasterCard</item>
+    </string-array>
+
 
 
 
